--- a/outils/plateaux_manipulation/aire_perimetre_plateau.html
+++ b/outils/plateaux_manipulation/aire_perimetre_plateau.html
@@ -424,14 +424,16 @@
       align-items:center;
       justify-content:center;
       font-weight: 950;
-      font-size: 11px;
-      color: rgba(20,32,51,.22);
+      font-size: 14px;
+      color: #000;
+      opacity: 0;
       pointer-events:none;
       user-select:none;
       z-index: 1;
       letter-spacing:.2px;
     }
-    body.projection .lbl{ font-size:14px; }
+    body.projection .lbl{ font-size:20px; }
+    .cell.on .lbl{ opacity:1; }
 
     .subgrid{
       position:absolute;
