--- a/outils/sheet_generator_schema_partie_tout.html
+++ b/outils/sheet_generator_schema_partie_tout.html
@@ -150,7 +150,18 @@
       .b6{left:140px; bottom:230px;}
       .b7{right:120px; bottom:250px;}
     }
-  </style>
+  
+/* Crédit SPLAT */
+.small .credit{
+  color: var(--blue);
+  text-decoration: none;
+  border-bottom: 1px dashed rgba(47,107,255,.45);
+  padding-bottom: 1px;
+}
+.small .credit:hover{
+  border-bottom-style: solid;
+}
+</style>
 </head>
 <body>
   <div class="bg" aria-hidden="true">
@@ -177,7 +188,9 @@
     <header>
       <div>
         <h1>Schémas partie-tout</h1>
-        <p class="small"> </p>
+        <p class="small">
+      Idée originale : <a class="credit" href="https://stevewyborney.com/" target="_blank" rel="noopener">SPLAT! par Steve Wyborney</a> — merci !
+</p>
       </div>
       <a class="home" href="./index.html" title="Outils"><svg viewBox="0 0 24 24" aria-hidden="true" style="width:22px;height:22px;display:block">
   <path d="M12 3.2 3 10.6v9.2c0 .9.7 1.6 1.6 1.6H9v-6.4h6v6.4h4.4c.9 0 1.6-.7 1.6-1.6v-9.2L12 3.2Z" fill="currentColor"/>
