--- a/outils/bouliers/abaque_de_gerbert/abaque_gerbert.html
+++ b/outils/bouliers/abaque_de_gerbert/abaque_gerbert.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <title>Abaque de Gerbert (V40)</title>
+  <title>Abaque de Gerbert avec zéro</title>
   <style>
     :root{
       --paper1:#f7f1e6;
@@ -600,20 +600,51 @@
 @media (max-width: 520px){
   #resolveBar button{ font-size: 15px !important; padding: 9px 10px !important; }
 }
+
+
+/* ✅ Option : masquer/afficher le groupe "Millions" (par défaut masqué) */
+body.noMillions .bigArchBlock[data-group="0"]{ display:none; }
+body.noMillions .bigArches{ grid-template-columns: 1fr 1fr; }
+body.noMillions .col[data-group="0"]{ display:none; }
+body.noMillions .groupSep[data-boundary="1"]{ display:none; }
+
+/* ✅ En mode "sans millions", on évite l’échange entre milliers et millions (col 3 -> col 2) */
+body.noMillions .col[data-col-index="3"] .exBtn{ display:none !important; }
+    .col.noEx .exBtn{ display:none !important; }
+
+/* ✅ Option : afficher/masquer les arceaux (par défaut affichés) */
+body.noArches{ --archH: 46px; }
+body.noArches .bigArchSvg{ display:none; }
+body.noArches .bigArchBlock{
+  background: rgba(255,255,255,0.62);
+  border:1px solid rgba(0,0,0,0.14);
+  border-radius:14px;
+}
+body.noArches .groupName{
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 12px;
+  letter-spacing: .8px;
+  color: rgba(0,0,0,0.78);
+}
+body.noArches .boardTop{ padding-top: 6px; }
+
 </style>
 </head>
 
 <body>
 <header>
   <div class="title">
-    Abaque de Gerbert
-    <span class="titleBadge">V40</span>
-  </div>
+    Abaque de Gerbert avec zéro</div>
   <div class="tools">
     <button class="btn" id="btnUndo">Retour</button>
     <button class="btn primary" id="btnClear">Réinitialiser</button>
     <button class="btn" id="btnBigValue">Affichage : OFF</button>
     <button class="btn" id="btnColValues">Valeurs : OFF</button>
+
+    <button class="btn" id="btnMillions">Millions : OFF</button>
+
+    <button class="btn" id="btnArches">Arceaux : ON</button>
 
     <button class="btn" id="btnFullscreen" title="Plein écran">
       <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
@@ -637,7 +668,7 @@
     <div class="boardTop">
       <div class="bigArches">
 
-        <div class="bigArchBlock">
+        <div class="bigArchBlock" data-group="0">
           <svg class="bigArchSvg" viewBox="0 0 300 120" aria-hidden="true">
             <path d="M10 116 C 78 12, 222 12, 290 116"
                   fill="none"
@@ -648,7 +679,7 @@
           <div class="groupName">Millions</div>
         </div>
 
-        <div class="bigArchBlock">
+        <div class="bigArchBlock" data-group="1">
           <svg class="bigArchSvg" viewBox="0 0 300 120" aria-hidden="true">
             <path d="M10 116 C 78 12, 222 12, 290 116"
                   fill="none"
@@ -659,7 +690,7 @@
           <div class="groupName">Milliers</div>
         </div>
 
-        <div class="bigArchBlock">
+        <div class="bigArchBlock" data-group="2">
           <svg class="bigArchSvg" viewBox="0 0 300 120" aria-hidden="true">
             <path d="M10 116 C 78 12, 222 12, 290 116"
                   fill="none"
@@ -716,7 +747,9 @@
     nextId: 1,
     undoStack: [],
     showBigValue: false,
-    showColValues: false
+    showColValues: false,
+    showMillions: false,
+    showArches: true
   };
 
   const board = document.getElementById("board");
@@ -724,6 +757,8 @@
   const bigValueOutside = document.getElementById("bigValueOutside");
 
   const boardWrap = document.getElementById("boardWrap");
+  const boardTopEl = document.querySelector(".boardTop");
+  const retLayerEl = document.getElementById("retLayer");
   const trashZone = document.getElementById("trashZone");
   const binTokens = document.getElementById("exchangeBinTokens");
 
@@ -731,6 +766,8 @@
   const btnClear = document.getElementById("btnClear");
   const btnBigValue = document.getElementById("btnBigValue");
   const btnColValues = document.getElementById("btnColValues");
+  const btnMillions = document.getElementById("btnMillions");
+  const btnArches = document.getElementById("btnArches");
   const btnExitResolve = document.getElementById("btnExitResolve");
   const btnFullscreen = document.getElementById("btnFullscreen");
 
@@ -761,7 +798,9 @@
       } : null,
       nextId: state.nextId,
       showBigValue: state.showBigValue,
-      showColValues: state.showColValues
+      showColValues: state.showColValues,
+      showMillions: state.showMillions,
+      showArches: state.showArches
     });
     updateUndoBtn();
   }
@@ -782,6 +821,8 @@
     state.nextId = snap.nextId;
     state.showBigValue = snap.showBigValue;
     state.showColValues = snap.showColValues;
+    state.showMillions = !!snap.showMillions;
+    state.showArches = (snap.showArches !== undefined ? !!snap.showArches : true);
     renderTray();
     render();
   }
@@ -818,6 +859,10 @@
   function applyTopUI(){
     btnBigValue.textContent = "Affichage : " + (state.showBigValue ? "ON" : "OFF");
     btnColValues.textContent = "Valeurs : " + (state.showColValues ? "ON" : "OFF");
+    btnMillions.textContent = "Millions : " + (state.showMillions ? "ON" : "OFF");
+    btnArches.textContent = "Arceaux : " + (state.showArches ? "ON" : "OFF");
+    document.body.classList.toggle("noMillions", !state.showMillions);
+    document.body.classList.toggle("noArches", !state.showArches);
 
     bigValueOutside.style.display = state.showBigValue ? "flex" : "none";
     if(state.showBigValue) bigValueOutside.textContent = formatGrouped(totalValue());
@@ -833,12 +878,14 @@
       if(i>0 && (i % 3 === 0)){
         const sep = document.createElement("div");
         sep.className = "groupSep";
+        sep.dataset.boundary = String(i/3);
         board.appendChild(sep);
       }
 
       const col = document.createElement("div");
       col.className = "col";
       col.dataset.colIndex = String(i);
+      col.dataset.group = String(Math.floor(i/3));
 
       const exBtn = document.createElement("div");
       exBtn.className = "exBtn";
@@ -900,24 +947,52 @@
     resolveBar.style.right = "auto";
   }
 
-  function positionTrashZone(){
-    if(!trashZone) return;
-    const wrapRect = boardWrap.getBoundingClientRect();
-    const cols = [...document.querySelectorAll(".col")];
-    if(cols.length === 0) return;
-    const last = cols[cols.length - 1].getBoundingClientRect();
+  
+function setReserveRight(px){
+  const v = (px || 0) + "px";
+  board.style.right = v;
+  if(boardTopEl) boardTopEl.style.right = v;
+  if(retLayerEl) retLayerEl.style.right = v;
+}
 
-    const left = (last.right - wrapRect.left) + 10;
-    const top  = (last.top - wrapRect.top) + 6;
+function positionTrashZone(){
+  if(!trashZone) return;
+  const wrapRect = boardWrap.getBoundingClientRect();
 
-    const width = Math.max(120, (wrapRect.width - left) - 10);
+  // uniquement les colonnes visibles (utile quand on masque "Millions")
+  const cols = [...document.querySelectorAll(".col")].filter(c => c.offsetParent !== null);
+  if(cols.length === 0) return;
+  const last = cols[cols.length - 1].getBoundingClientRect();
+
+  const top  = (last.top - wrapRect.top) + 6;
+
+  // ✅ Sans millions : on réserve un vrai espace à droite (zone d’échange plus grande)
+  if(!state.showMillions){
+    const zoneW = Math.max(180, Math.min(300, Math.round(wrapRect.width * 0.22)));
+    const left  = wrapRect.width - zoneW - 10;
     const height = Math.max(120, (wrapRect.height - top) - 10);
 
     trashZone.style.left = left + "px";
     trashZone.style.top  = top + "px";
-    trashZone.style.width = width + "px";
+    trashZone.style.width = zoneW + "px";
     trashZone.style.height = height + "px";
+
+    setReserveRight(zoneW + 10);
+    return;
   }
+
+  // ✅ Avec millions : on garde exactement le comportement actuel
+  setReserveRight(0);
+
+  const left = (last.right - wrapRect.left) + 10;
+  const width = Math.max(120, (wrapRect.width - left) - 10);
+  const height = Math.max(120, (wrapRect.height - top) - 10);
+
+  trashZone.style.left = left + "px";
+  trashZone.style.top  = top + "px";
+  trashZone.style.width = width + "px";
+  trashZone.style.height = height + "px";
+}
   window.addEventListener("resize", () => { positionTrashZone(); if(state.exchange){ positionResolveBar(); } });
   window.addEventListener("scroll", () => { positionTrashZone(); if(state.exchange){ positionResolveBar(); } }, {passive:true});
 
@@ -963,6 +1038,10 @@
   }
 
   function render(){
+    // ✅ Important : on applique d'abord l'état d'affichage (classe noMillions)
+    // afin que les calculs de position (getBoundingClientRect) se fassent
+    // sur la mise en page réellement visible.
+    applyTopUI();
     const colEls = [...document.querySelectorAll(".col")];
 
     for(const colEl of colEls){
@@ -991,6 +1070,8 @@
 
       colEl.classList.toggle("has2", state.cols[i].length >= 2);
 
+      colEl.classList.toggle("noEx", (!state.showMillions && i === 3));
+
       if(state.exchange){
         const locked = !isColAllowed(i);
         colEl.classList.toggle("locked", locked);
@@ -1003,7 +1084,6 @@
     renderBin();
     positionTrashZone();
     positionResolveBar();
-    applyTopUI();
     applyExchangeUI();
     updateUndoBtn();
   }
@@ -1218,6 +1298,9 @@
     if(leftCol < 0) return;
     if(state.exchange) return;
 
+    // ✅ Si "Millions" est masqué, on empêche l’échange qui aurait besoin d’une colonne invisible (col 3 -> col 2)
+    if(!state.showMillions && leftCol < 3) return;
+
     state.exchange = {
       focusCol,
       leftCol,
@@ -1307,6 +1390,39 @@
     state.showColValues = !state.showColValues;
     render();
   });
+
+
+btnMillions.addEventListener("click", () => {
+  // si on est en mode échange, on sort proprement avant de changer la vue
+  if(state.exchange) exitExchange();
+  pushUndo();
+  state.showMillions = !state.showMillions;
+  render();
+
+  // ✅ Important : la mise en page (colonnes affichées/masquées + réserves à droite)
+  // peut être appliquée "après" ce render() côté navigateur.
+  // On recalcule donc les positions au prochain frame pour éviter que la Zone d’échange
+  // reste à l’ancienne place jusqu’au prochain déplacement d’un jeton.
+  requestAnimationFrame(() => {
+    positionTrashZone();
+    positionResolveBar();
+  });
+});
+
+btnArches.addEventListener("click", () => {
+  // si on est en mode échange, on sort proprement avant de changer la vue
+  if(state.exchange) exitExchange();
+  pushUndo();
+  state.showArches = !state.showArches;
+  render();
+
+  // ✅ Comme pour les Millions : le changement de hauteur (var(--archH)) peut être appliqué
+  // après le render() côté navigateur. On recalcule les positions au prochain frame.
+  requestAnimationFrame(() => {
+    positionTrashZone();
+    positionResolveBar();
+  });
+});
 
   btnValidate.addEventListener("click", validateExchange);
   btnCancel.addEventListener("click", exitExchange);
