--- a/outils/splat.html
+++ b/outils/splat.html
@@ -337,6 +337,7 @@ input[type="number"]{appearance:textfield}
       <option value="C">C — Enquête (relations, 3 couleurs)</option>
       <option value="D">D — Système (sommes, 3 couleurs)</option>
       <option value="EQ">E — Équation (2 plateaux)</option>
+          <option value="EQPM">E± — Equation (2 plateaux, entiers relatifs)</option>
           <option value="C9">F — Opérations en 9 (9 → 99)</option>
           <option value="C8">G — Opérations en 8 (8 → 98)</option>
     </select>
@@ -446,12 +447,12 @@ input[type="number"]{appearance:textfield}
           <input id="numBeadAbsMax" type="number" min="1" max="99" value="30" style="width:72px" />
         </div>
         <div id="numOpposeModeWrap" style="flex:0 0 auto; display:none">
-          <label>Taches opposées<br>(±X)</label>
+          <label>Taches opposees<br>(±X)</label>
           <select id="numOpposeMode" style="width:130px">
           <option value="off" selected>Aucune</option>
-          <option value="all">Toutes opposées</option>
+          <option value="all">Toutes opposees</option>
           <option value="auto">Parfois</option>
-          <option value="mix">Mélange</option>
+          <option value="mix">Melange</option>
         </select>
         </div>
 
@@ -479,7 +480,7 @@ input[type="number"]{appearance:textfield}
           <select id="nineOp">
             <option value="SUB" selected>Différence (TOTAL − …)</option>
             <option value="ADD">Somme (…9 visible + autres)</option>
-            <option value="MIX">Mélange</option>
+            <option value="MIX">Melange</option>
           </select>
         </div>
         <div style="flex:1">
@@ -514,7 +515,7 @@ input[type="number"]{appearance:textfield}
           <select id="eightOp">
             <option value="SUB" selected>Différence (TOTAL − …)</option>
             <option value="ADD">Somme (…8 visible + autres)</option>
-            <option value="MIX">Mélange</option>
+            <option value="MIX">Melange</option>
           </select>
         </div>
         <div style="flex:1">
@@ -810,7 +811,7 @@ function setNumTasksRangeVisible(show){
 }
 function syncNumTasksUI(act){
   if(!numTasksEl || !labelNumTasksEl) return;
-  const key = (act === "EQ") ? "EQ" : ((act === "N" || act === "NPM") ? "N" : "OTHER");
+  const key = (act === "EQ" || act === "EQPM") ? "EQ" : ((act === "N" || act === "NPM") ? "N" : "OTHER");
   if(_tasksUIKeyPrev === key) return;
 
   if(key === "EQ"){
@@ -982,7 +983,7 @@ function getSeedForCurrentMode(){
   const act = activityEl.value;
   if(act === "U") return (seedUEl.value||"").trim() ? Number(seedUEl.value) : "";
   if(act === "N" || act === "NPM") return (seedNEl.value||"").trim() ? Number(seedNEl.value) : "";
-  if(act === "EQ") return (seedNEl.value||"").trim() ? Number(seedNEl.value) : "";
+  if(act === "EQ" || act === "EQPM") return (seedNEl.value||"").trim() ? Number(seedNEl.value) : "";
   if(act === "C") return (seedEEl.value||"").trim() ? Number(seedEEl.value) : "";
   if(act === "D") return (seedSysEl.value||"").trim() ? Number(seedSysEl.value) : "";
   if(act === "C9") return (seedCEl.value||"").trim() ? Number(seedCEl.value) : "";
@@ -1031,7 +1032,7 @@ function syncSettingsUI(){
         numTotalMaxEl.value = "30";
       }
     }
-  } else if(act === "N" || act === "EQ"){
+  } else if(act === "N" || act === "EQ" || act === "EQPM"){
     // B and EQ stay on positive totals (historical behavior)
     numTotalMinEl.min = "1"; numTotalMinEl.max = "1000";
     numTotalMaxEl.min = "1"; numTotalMaxEl.max = "1000";
@@ -1042,7 +1043,7 @@ function syncSettingsUI(){
   }
 
   const isUnit = act === "U";
-  const isEquation = act === "EQ";
+  const isEquation = (act === "EQ" || act === "EQPM");
   syncNumTasksUI(act);
   const isNumbered = (act === "N" || act === "NPM" || isEquation);
   const isNine = act === "C9";
@@ -1073,9 +1074,9 @@ function syncSettingsUI(){
   systemSettingsEl.style.display = isSystem ? "block" : "none";
 
   // B± uniquement : borne sur la valeur absolue des billes
-  if(numBeadAbsMaxWrapEl) numBeadAbsMaxWrapEl.style.display = (act === "NPM") ? "block" : "none";
-  if(numOpposeModeWrapEl) numOpposeModeWrapEl.style.display = (act === "NPM") ? "block" : "none";
-  if(act === "NPM") sanitizeBeadAbsMaxForBPM();
+  if(numBeadAbsMaxWrapEl) numBeadAbsMaxWrapEl.style.display = (act === "NPM" || act === "EQPM") ? "block" : "none";
+  if(numOpposeModeWrapEl) numOpposeModeWrapEl.style.display = (act === "NPM" || act === "EQPM") ? "block" : "none";
+  if(act === "NPM" || act === "EQPM") sanitizeBeadAbsMaxForBPM();
 
   if(isInvestigate){
     if(invTaskCountEl.value === "3"){ invStructureRow.style.display = "flex"; } else { invStructureRow.style.display = "none"; }
@@ -1145,7 +1146,7 @@ function scheduleAutoGenerate(){
   autoGenTimer = setTimeout(()=>{
     if(activityEl.value === "U") syncUnitTotalBounds();
     sanitizeNumberedTotalBoundsForMode();
-    if(activityEl.value === "NPM") sanitizeBeadAbsMaxForBPM();
+    if(activityEl.value === "NPM" || activityEl.value === "EQPM") sanitizeBeadAbsMaxForBPM();
     generate();
   }, 150);
 }
@@ -1422,7 +1423,7 @@ for(const s of splats){
 function assignPositions(card, rng){
   if(card.family === "U"){
     assignPositionsUnits(card, rng);
-  }else if(card.family === "EQ"){
+  }else if(card.family === "EQ" || card.family === "EQPM"){
     assignPositionsEquation(card, rng);
   }else if(card.family === "N" || card.family === "NPM" || card.family === "C9" || card.family === "C8" || card.family === "C" || card.family === "D"){
     assignPositionsNumbered(card, rng);
@@ -1812,7 +1813,7 @@ function genNumberedSigned(rng){
 
   // Mode "taches opposées" :
   // - "Aucune" : B± classique (toutes les tâches ont la même somme H, H peut être + ou -)
-  // - "Toutes opposées" : toutes les tâches ont la somme -A (A>0)
+  // - "Toutes opposees" : toutes les tâches ont la somme -A (A>0)
   // - "Mélange" : certaines tâches ont +A, d'autres -A, sans annulation globale
   // - "Parfois" : une fois sur deux, aucune / toutes opposées
   const opposeSetting = (numOpposeModeEl && numOpposeModeEl.value) ? numOpposeModeEl.value : "off";
@@ -2138,6 +2139,193 @@ function genEquation(rng){
     }
   };
 }
+
+
+
+function genEquationSigned(rng){
+  // Mode EQPM : deux plateaux (gauche/droite) avec la même quantité totale,
+  // mais avec billes visibles signées et possibilité de taches "opposees" (-x).
+  // Chaque tache cache exactement 1 bille (valeur +x ou -x), identique en valeur absolue partout.
+  // Pour que l'équation soit résoluble, on impose coefGauche !== coefDroite (et coef != 0).
+
+  const maxTasksUser = clamp(numberOr(numTasksEl.value, 6), 1, 6);
+  const maxTasksEq = Math.max(2, maxTasksUser);
+
+  // Billes visibles (min/max) s'appliquent PAR PLATEAU (gauche ET droite)
+  let vMin = clamp(numberOr(numVisibleMinEl.value, 1), 0, 6);
+  let vMax = clamp(numberOr(numVisibleMaxEl.value, 3), 0, 6);
+  if(vMax < vMin) [vMin, vMax] = [vMax, vMin];
+
+  // Total min/max = total à gauche (et donc le même à droite), pas la somme des 2 plateaux.
+  let userMin = clamp(numberOr(numTotalMinEl.value, 20), 1, 1000);
+  let userMax = clamp(numberOr(numTotalMaxEl.value, 50), 1, 1000);
+  if(userMax < userMin) [userMin, userMax] = [userMax, userMin];
+
+  const maxAbs = clamp(numberOr(numBeadAbsMaxEl?.value, 30), 1, 99);
+
+// Mode "taches opposees" (comme B±) :
+// - off  : aucune tache opposee (tout +x)
+// - all  : pas de melange : chaque cote est soit tout +x, soit tout -x (au hasard)
+// - auto : parfois aucun oppose, parfois melange
+// - mix  : melange possible dans un cote
+const opposeSetting = (numOpposeModeEl && numOpposeModeEl.value) ? String(numOpposeModeEl.value).toLowerCase() : "off";
+const autoPick = (opposeSetting === "auto") ? ((rng() < 0.5) ? "off" : "mix") : null;
+
+function sumArr(a){ let s=0; for(const x of a) s+=x; return s; }
+function hasBothSigns(arr){
+  let pos=false, neg=false;
+  for(const s of arr){ if(s>0) pos=true; else if(s<0) neg=true; if(pos && neg) return true; }
+  return false;
+}
+
+function chooseUniformSigns(n){
+  const s = (rng() < 0.5) ? 1 : -1;
+  return new Array(n).fill(s);
+}
+function chooseMixedSignsNonZero(n){
+  // n>=3 attendu
+  const candidates = [];
+  for(let k=1; k<=n-1; k++){
+    if(n % 2 === 0 && k === (n/2)) continue; // eviter somme = 0
+    candidates.push(k);
+  }
+  if(candidates.length === 0) return new Array(n).fill(1);
+  const k = candidates[rInt(rng, 0, candidates.length-1)];
+  const out = new Array(n).fill(1);
+  for(let i=0;i<k;i++) out[i] = -1;
+  shuffleInPlace(out, rng);
+  return out;
+}
+function chooseSignsPair(nL, nR, mode){
+  if(mode === "off"){
+    return { L:new Array(nL).fill(1), R:new Array(nR).fill(1) };
+  }
+  if(mode === "all"){
+    return { L:chooseUniformSigns(nL), R:chooseUniformSigns(nR) };
+  }
+  // mode "mix" : on veut du vrai melange (au moins un cote avec + et -)
+  const canMixL = (nL >= 3);
+  const canMixR = (nR >= 3);
+  if(!canMixL && !canMixR) return null;
+
+  // 1/3 : mix/mix, 1/3 : uniforme/mix, 1/3 : mix/uniforme (quand possible)
+  let pattern = 0; // 0=mix/mix, 1=uni/mix, 2=mix/uni
+  if(canMixL && canMixR){
+    pattern = rInt(rng, 0, 2);
+  }else if(canMixR){
+    pattern = 1;
+  }else{
+    pattern = 2;
+  }
+
+  let L, R;
+  if(pattern === 0){
+    L = chooseMixedSignsNonZero(nL);
+    R = chooseMixedSignsNonZero(nR);
+  }else if(pattern === 1){
+    L = chooseUniformSigns(nL);
+    R = chooseMixedSignsNonZero(nR);
+  }else{
+    L = chooseMixedSignsNonZero(nL);
+    R = chooseUniformSigns(nR);
+  }
+  return { L, R };
+}
+
+  for(let tries=0; tries<6000; tries++){
+    const tasksL = rInt(rng, 1, maxTasksEq);
+    const tasksR = rInt(rng, 1, maxTasksEq);
+
+    let mode = opposeSetting;
+    if(mode === "auto") mode = autoPick;
+
+    const pair = chooseSignsPair(tasksL, tasksR, mode);
+    if(!pair) continue;
+    const signsL = pair.L;
+    const signsR = pair.R;
+if(mode === "mix"){
+      // Forcer un vrai "melange" (au moins un cote avec + et -)
+      if(!(hasBothSigns(signsL) || hasBothSigns(signsR))) continue;
+    }
+
+    const a = sumArr(signsL);
+    const b = sumArr(signsR);
+
+    // Eviter les simplifications "0x" (sur un plateau) et l'annulation complète
+    if(a === 0 || b === 0) continue;
+    if(a === b) continue;
+
+    const vCountL = rInt(rng, vMin, vMax);
+    const vCountR = rInt(rng, vMin, vMax);
+
+    const maxCoeff = Math.max(Math.abs(a), Math.abs(b), 1);
+    // borne grossière pour x, puis on clamp à maxAbs (logique "valeur absolue")
+    let xMax = Math.floor((userMax + Math.max(vCountL, vCountR) * maxAbs) / maxCoeff);
+    xMax = clamp(xMax, 1, maxAbs);
+    const x = rInt(rng, 1, xMax);
+
+    // Chercher un total T faisable pour les deux plateaux :
+    // VL = T - a*x doit être décomposable en vCountL nombres non nuls avec |val|<=maxAbs
+    // VR = T - b*x doit être décomposable en vCountR nombres non nuls avec |val|<=maxAbs
+    let tLow = userMin;
+    let tHigh = userMax;
+
+    function applyRange(coef, vCount){
+      if(vCount === 0){
+        // somme visible doit être 0 => T = coef*x
+        const t = coef * x;
+        tLow = Math.max(tLow, t);
+        tHigh = Math.min(tHigh, t);
+        return;
+      }
+      const lo = (coef * x) - (vCount * maxAbs);
+      const hi = (coef * x) + (vCount * maxAbs);
+      tLow = Math.max(tLow, Math.min(lo, hi));
+      tHigh = Math.min(tHigh, Math.max(lo, hi));
+    }
+    applyRange(a, vCountL);
+    applyRange(b, vCountR);
+
+    if(tHigh < tLow) continue;
+
+    // Petit biais vers des totaux proches des bornes pour varier (et obtenir plus souvent des négatifs)
+    let total;
+    if(rng() < 0.25){
+      total = tLow;
+    }else if(rng() < 0.50){
+      total = tHigh;
+    }else{
+      total = (tLow === tHigh) ? tLow : rInt(rng, tLow, tHigh);
+    }
+
+    const VL = total - a*x;
+    const VR = total - b*x;
+
+    const leftVisible  = (vCountL === 0) ? [] : randomSignedCompositionNonZero(rng, VL, vCountL, maxAbs);
+    const rightVisible = (vCountR === 0) ? [] : randomSignedCompositionNonZero(rng, VR, vCountR, maxAbs);
+    if(leftVisible === null || rightVisible === null) continue;
+
+    const leftHiddenByTask  = Array.from({length:tasksL}, (_,i)=>[signsL[i] * x]);
+    const rightHiddenByTask = Array.from({length:tasksR}, (_,i)=>[signsR[i] * x]);
+
+    return {
+      family: "EQPM",
+      total: total,
+      visible: leftVisible.concat(rightVisible),
+      hidden: leftHiddenByTask.flat().concat(rightHiddenByTask.flat()),
+      _eq: {
+        total,
+        x,
+        left:  { tasks:tasksL, visible:leftVisible,  hiddenByTask:leftHiddenByTask,  opposeFlags: signsL.map(s=>s<0) },
+        right: { tasks:tasksR, visible:rightVisible, hiddenByTask:rightHiddenByTask, opposeFlags: signsR.map(s=>s<0) }
+      }
+    };
+  }
+
+  // Fallback robuste : EQ classique
+  return genEquation(rng);
+}
+
 
 
 function genOp9(rng){
@@ -2786,7 +2974,7 @@ function drawBarModelPartsInGroup(g, cx, topY, total, parts, api){
 function renderCard(card, revealed){
   clearSvg();
 
-  if(card.family === "EQ"){
+  if(card.family === "EQ" || card.family === "EQPM"){
     renderCardEquation(card, revealed);
     return;
   }
@@ -3082,7 +3270,7 @@ indices.forEach((txt, i) => {
       }));
       if(card.family === "NPM" && card._num && Array.isArray(card._num.opposedTasks) && card._num.opposedTasks[idx]){
         const fs = clamp(Math.round(s.r*0.34), 28, 64);
-        const y = revealed ? (s.cy - s.r*0.55) : (s.cy);
+        const y = revealed ? (s.cy - s.r*0.65) : (s.cy);
         layer.appendChild(text(s.cx, y, "opposé", {
           "text-anchor":"middle",
           "dominant-baseline":"middle",
@@ -3094,10 +3282,10 @@ indices.forEach((txt, i) => {
           "paint-order":"stroke fill"
         }));
       }
-      // PATCH 6 — libellé "opposé" sur certaines taches (B±)
+      // PATCH 6 — libellé "oppose" sur certaines taches (B±)
       if(opp && opp.flags[idx]){
         const fs = clamp(Math.round(s.r*0.34), 28, 64);
-        const y = revealed ? (s.cy - s.r*0.55) : (s.cy);
+        const y = revealed ? (s.cy - s.r*0.65) : (s.cy);
         layer.appendChild(text(s.cx, y, "opposé", {
           "text-anchor":"middle",
           "dominant-baseline":"middle",
@@ -3200,14 +3388,29 @@ function renderCardEquation(card, revealed){
     }
 
     // taches
-    for(const s of (side.splats || [])){
+    const oppFlags = Array.isArray(metaSide.opposeFlags) ? metaSide.opposeFlags : null;
+    (side.splats || []).forEach((s, idx)=>{
       layer.appendChild(el("path",{
         d: blobPath(s.cx, s.cy, s.r),
         fill: revealed ? reveal : cover,
         stroke:"rgba(0,0,0,0.18)",
         "stroke-width":"5"
       }));
-    }
+      if(oppFlags && oppFlags[idx]){
+        const fs = clamp(Math.round(s.r*0.28), 16, 44);
+        const yy = revealed ? (s.cy - s.r*0.65) : (s.cy);
+        layer.appendChild(text(s.cx, yy, "opposé", {
+          "text-anchor":"middle",
+          "dominant-baseline":"middle",
+          "font-size": String(fs),
+          "font-weight":"900",
+          "fill": (revealed ? "rgba(0,0,0,0.92)" : "rgba(255,255,255,0.95)"),
+          "stroke": (revealed ? "rgba(255,255,255,0.78)" : "rgba(0,0,0,0)"),
+          "stroke-width": (revealed ? "5" : "0"),
+          "paint-order":"stroke fill"
+        }));
+      }
+    });
 
     // billes visibles
     for(let i=0;i<metaSide.visible.length;i++){
@@ -3259,9 +3462,24 @@ function drawSide(side, metaSide){
       }
     }
 
-    for(const s of (side.splats || [])){
+    const oppFlags = Array.isArray(metaSide.opposeFlags) ? metaSide.opposeFlags : null;
+    (side.splats || []).forEach((s, idx)=>{
       targetSvg.appendChild(tEl("path",{d: blobPath(s.cx, s.cy, s.r), fill: revealAnswers ? reveal : cover, stroke:"rgba(0,0,0,0.18)","stroke-width":"5"}));
-    }
+      if(oppFlags && oppFlags[idx]){
+        const fs = clamp(Math.round(s.r*0.28), 16, 44);
+        const yy = revealAnswers ? (s.cy - s.r*0.65) : (s.cy);
+        targetSvg.appendChild(tText(s.cx, yy, "opposé", {
+          "text-anchor":"middle",
+          "dominant-baseline":"middle",
+          "font-size": String(fs),
+          "font-weight":"900",
+          "fill": (revealAnswers ? "rgba(0,0,0,0.92)" : "rgba(255,255,255,0.95)"),
+          "stroke": (revealAnswers ? "rgba(255,255,255,0.78)" : "rgba(0,0,0,0)"),
+          "stroke-width": (revealAnswers ? "5" : "0"),
+          "paint-order":"stroke fill"
+        }));
+      }
+    });
 
     for(let i=0;i<metaSide.visible.length;i++){
       const p = side.posV?.[i] || {cx:450+i*40, cy:360};
@@ -3295,7 +3513,7 @@ function renderCardIntoSvg(targetSvg, card, revealAnswers){
 
   targetSvg.appendChild(tEl("rect",{x:0,y:0,width:W,height:H,rx:26,fill:"#fff"}));
 
-  if(card.family === "EQ"){
+  if(card.family === "EQ" || card.family === "EQPM"){
     renderCardEquationPrint(targetSvg, card, revealAnswers, tEl, tText);
     return;
   }
@@ -3472,7 +3690,7 @@ const gBM = tEl("g",{id:"barModelPrint"});
       targetSvg.appendChild(tEl("path",{d: blobPath(s.cx, s.cy + printOffsetY, s.r), fill:f, stroke:"rgba(0,0,0,0.18)","stroke-width":"5"}));
       if(card.family === "NPM" && card._num && Array.isArray(card._num.opposedTasks) && card._num.opposedTasks[idx]){
         const fs = clamp(Math.round(s.r*0.34), 28, 64);
-        const y = revealAnswers ? (s.cy + printOffsetY - s.r*0.55) : (s.cy + printOffsetY);
+        const y = revealAnswers ? (s.cy + printOffsetY - s.r*0.65) : (s.cy + printOffsetY);
         targetSvg.appendChild(tText(s.cx, y, "opposé", {
           "text-anchor":"middle",
           "dominant-baseline":"middle",
@@ -3484,10 +3702,10 @@ const gBM = tEl("g",{id:"barModelPrint"});
           "paint-order":"stroke fill"
         }));
       }
-      // PATCH 6 — libellé "opposé" (impression)
+      // PATCH 6 — libellé "oppose" (impression)
       if(oppP && oppP.flags[idx]){
         const fs = clamp(Math.round(s.r*0.34), 28, 64);
-        const y = revealAnswers ? (s.cy + printOffsetY - s.r*0.55) : (s.cy + printOffsetY);
+        const y = revealAnswers ? (s.cy + printOffsetY - s.r*0.65) : (s.cy + printOffsetY);
         targetSvg.appendChild(tText(s.cx, y, "opposé", {
           "text-anchor":"middle",
           "dominant-baseline":"middle",
@@ -3659,6 +3877,8 @@ function generate(){
       c = genNumberedSigned(rng);
     }else if(act==="EQ"){
       c = genEquation(rng);
+    }else if(act==="EQPM"){
+      c = genEquationSigned(rng);
     }else if(act==="C"){
       c = genInvestigate(rng);
     }else if(act==="D"){
